[gd_scene load_steps=13 format=4 uid="uid://d03fmgpar4wam"]

[ext_resource type="Texture2D" uid="uid://cv1tyxj5klge4" path="res://assets/Dungeon_Tileset_Resize32x32.png" id="1_7rgrb"]
[ext_resource type="Script" path="res://scripts/room.gd" id="1_apaen"]
[ext_resource type="FontFile" uid="uid://ni4di2byl52v" path="res://assets/fonts/DUNGRG__.TTF" id="2_1f6rj"]
[ext_resource type="Script" path="res://scripts/ui_logic/build_menu.gd" id="2_xdf3i"]
[ext_resource type="Script" path="res://scripts/entity_manager.gd" id="3_uocvj"]
[ext_resource type="AudioStream" uid="uid://cxo6ocf6t6l18" path="res://sounds/Click Sound Pack/Click1B.ogg" id="6_ey8w6"]
[ext_resource type="Texture2D" uid="uid://ea5h54loho2r" path="res://assets/stick_note.png" id="7_86ec3"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_aljnk"]
texture = ExtResource("1_7rgrb")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
6:0/0/terrain_set = 0
6:0/0/terrain = 0
6:0/0/terrains_peering_bit/right_side = 0
6:0/0/terrains_peering_bit/bottom_right_corner = 0
6:0/0/terrains_peering_bit/bottom_side = 0
6:0/0/terrains_peering_bit/bottom_left_corner = 0
6:0/0/terrains_peering_bit/left_side = 0
6:0/0/terrains_peering_bit/top_left_corner = 0
6:0/0/terrains_peering_bit/top_side = 0
6:0/0/terrains_peering_bit/top_right_corner = 0
7:0/0 = 0
7:0/0/terrain_set = 0
7:0/0/terrain = 0
7:0/0/terrains_peering_bit/right_side = 0
7:0/0/terrains_peering_bit/bottom_right_corner = 0
7:0/0/terrains_peering_bit/bottom_side = 0
7:0/0/terrains_peering_bit/bottom_left_corner = 0
7:0/0/terrains_peering_bit/left_side = 0
7:0/0/terrains_peering_bit/top_left_corner = 0
7:0/0/terrains_peering_bit/top_side = 0
7:0/0/terrains_peering_bit/top_right_corner = 0
8:0/0 = 0
8:0/0/terrain_set = 0
8:0/0/terrain = 0
8:0/0/terrains_peering_bit/right_side = 0
8:0/0/terrains_peering_bit/bottom_right_corner = 0
8:0/0/terrains_peering_bit/bottom_side = 0
8:0/0/terrains_peering_bit/bottom_left_corner = 0
8:0/0/terrains_peering_bit/left_side = 0
8:0/0/terrains_peering_bit/top_left_corner = 0
8:0/0/terrains_peering_bit/top_side = 0
8:0/0/terrains_peering_bit/top_right_corner = 0
9:0/0 = 0
9:0/0/terrain_set = 0
9:0/0/terrain = 0
9:0/0/terrains_peering_bit/right_side = 0
9:0/0/terrains_peering_bit/bottom_right_corner = 0
9:0/0/terrains_peering_bit/bottom_side = 0
9:0/0/terrains_peering_bit/bottom_left_corner = 0
9:0/0/terrains_peering_bit/left_side = 0
9:0/0/terrains_peering_bit/top_left_corner = 0
9:0/0/terrains_peering_bit/top_side = 0
9:0/0/terrains_peering_bit/top_right_corner = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/terrains_peering_bit/right_side = 0
2:1/0/terrains_peering_bit/bottom_right_corner = 0
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/left_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/terrains_peering_bit/right_side = 0
3:1/0/terrains_peering_bit/bottom_right_corner = 0
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/bottom_left_corner = 0
3:1/0/terrains_peering_bit/left_side = 0
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/terrain = 0
4:1/0/terrains_peering_bit/bottom_side = 0
4:1/0/terrains_peering_bit/bottom_left_corner = 0
4:1/0/terrains_peering_bit/left_side = 0
5:1/0 = 0
6:1/0 = 0
6:1/0/terrain_set = 0
6:1/0/terrain = 0
6:1/0/terrains_peering_bit/right_side = 0
6:1/0/terrains_peering_bit/bottom_right_corner = 0
6:1/0/terrains_peering_bit/bottom_side = 0
6:1/0/terrains_peering_bit/bottom_left_corner = 0
6:1/0/terrains_peering_bit/left_side = 0
6:1/0/terrains_peering_bit/top_left_corner = 0
6:1/0/terrains_peering_bit/top_side = 0
6:1/0/terrains_peering_bit/top_right_corner = 0
7:1/0 = 0
7:1/0/terrain_set = 0
7:1/0/terrain = 0
7:1/0/terrains_peering_bit/right_side = 0
7:1/0/terrains_peering_bit/bottom_right_corner = 0
7:1/0/terrains_peering_bit/bottom_side = 0
7:1/0/terrains_peering_bit/bottom_left_corner = 0
7:1/0/terrains_peering_bit/left_side = 0
7:1/0/terrains_peering_bit/top_left_corner = 0
7:1/0/terrains_peering_bit/top_side = 0
7:1/0/terrains_peering_bit/top_right_corner = 0
8:1/0 = 0
8:1/0/terrain_set = 0
8:1/0/terrain = 0
8:1/0/terrains_peering_bit/right_side = 0
8:1/0/terrains_peering_bit/bottom_right_corner = 0
8:1/0/terrains_peering_bit/bottom_side = 0
8:1/0/terrains_peering_bit/bottom_left_corner = 0
8:1/0/terrains_peering_bit/left_side = 0
8:1/0/terrains_peering_bit/top_left_corner = 0
8:1/0/terrains_peering_bit/top_side = 0
8:1/0/terrains_peering_bit/top_right_corner = 0
9:1/0 = 0
9:1/0/terrain_set = 0
9:1/0/terrain = 0
9:1/0/terrains_peering_bit/right_side = 0
9:1/0/terrains_peering_bit/bottom_right_corner = 0
9:1/0/terrains_peering_bit/bottom_side = 0
9:1/0/terrains_peering_bit/bottom_left_corner = 0
9:1/0/terrains_peering_bit/left_side = 0
9:1/0/terrains_peering_bit/top_left_corner = 0
9:1/0/terrains_peering_bit/top_side = 0
9:1/0/terrains_peering_bit/top_right_corner = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/bottom_right_corner = 0
1:2/0/terrains_peering_bit/bottom_side = 0
1:2/0/terrains_peering_bit/top_side = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
4:2/0/terrain_set = 0
4:2/0/terrain = 0
4:2/0/terrains_peering_bit/bottom_side = 0
4:2/0/terrains_peering_bit/bottom_left_corner = 0
4:2/0/terrains_peering_bit/left_side = 0
4:2/0/terrains_peering_bit/top_left_corner = 0
4:2/0/terrains_peering_bit/top_side = 0
5:2/0 = 0
6:2/0 = 0
6:2/0/terrain_set = 0
6:2/0/terrain = 0
6:2/0/terrains_peering_bit/right_side = 0
6:2/0/terrains_peering_bit/bottom_right_corner = 0
6:2/0/terrains_peering_bit/bottom_side = 0
6:2/0/terrains_peering_bit/bottom_left_corner = 0
6:2/0/terrains_peering_bit/left_side = 0
6:2/0/terrains_peering_bit/top_left_corner = 0
6:2/0/terrains_peering_bit/top_side = 0
6:2/0/terrains_peering_bit/top_right_corner = 0
7:2/0 = 0
7:2/0/terrain_set = 0
7:2/0/terrain = 0
7:2/0/terrains_peering_bit/right_side = 0
7:2/0/terrains_peering_bit/bottom_right_corner = 0
7:2/0/terrains_peering_bit/bottom_side = 0
7:2/0/terrains_peering_bit/bottom_left_corner = 0
7:2/0/terrains_peering_bit/left_side = 0
7:2/0/terrains_peering_bit/top_left_corner = 0
7:2/0/terrains_peering_bit/top_side = 0
7:2/0/terrains_peering_bit/top_right_corner = 0
8:2/0 = 0
8:2/0/terrain_set = 0
8:2/0/terrain = 0
8:2/0/terrains_peering_bit/right_side = 0
8:2/0/terrains_peering_bit/bottom_right_corner = 0
8:2/0/terrains_peering_bit/bottom_side = 0
8:2/0/terrains_peering_bit/bottom_left_corner = 0
8:2/0/terrains_peering_bit/left_side = 0
8:2/0/terrains_peering_bit/top_left_corner = 0
8:2/0/terrains_peering_bit/top_side = 0
8:2/0/terrains_peering_bit/top_right_corner = 0
9:2/0 = 0
9:2/0/terrain_set = 0
9:2/0/terrain = 0
9:2/0/terrains_peering_bit/right_side = 0
9:2/0/terrains_peering_bit/bottom_right_corner = 0
9:2/0/terrains_peering_bit/bottom_side = 0
9:2/0/terrains_peering_bit/bottom_left_corner = 0
9:2/0/terrains_peering_bit/left_side = 0
9:2/0/terrains_peering_bit/top_left_corner = 0
9:2/0/terrains_peering_bit/top_side = 0
9:2/0/terrains_peering_bit/top_right_corner = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:3/0 = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/terrains_peering_bit/right_side = 0
1:3/0/terrains_peering_bit/top_side = 0
1:3/0/terrains_peering_bit/top_right_corner = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/terrains_peering_bit/right_side = 0
2:3/0/terrains_peering_bit/left_side = 0
2:3/0/terrains_peering_bit/top_left_corner = 0
2:3/0/terrains_peering_bit/top_side = 0
2:3/0/terrains_peering_bit/top_right_corner = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
3:3/0/terrains_peering_bit/right_side = 0
3:3/0/terrains_peering_bit/left_side = 0
3:3/0/terrains_peering_bit/top_left_corner = 0
3:3/0/terrains_peering_bit/top_side = 0
3:3/0/terrains_peering_bit/top_right_corner = 0
4:3/0 = 0
4:3/0/terrain_set = 0
4:3/0/terrain = 0
4:3/0/terrains_peering_bit/left_side = 0
4:3/0/terrains_peering_bit/top_left_corner = 0
4:3/0/terrains_peering_bit/top_side = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0

[sub_resource type="TileSet" id="TileSet_r5v4w"]
tile_size = Vector2i(32, 32)
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_aljnk")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_811ij"]
size = Vector2(226, 114)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jcsgq"]
size = Vector2(24.5, 564.75)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_mygq7"]
vertices = PackedVector2Array(825.961, 72.9375, 824.031, 568.977, 329.047, 568.008, 331.938, 70.0469)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(322, 60, 836, 63, 834, 579, 319, 578)])

[node name="Room" type="Node2D"]
process_mode = 1
script = ExtResource("1_apaen")

[node name="Panel" type="Panel" parent="."]
offset_right = 1154.0
offset_bottom = 645.0

[node name="BoardBackground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAZABEAAAAEAAMAAAAZABAAAAAEAAIAAAAZAA8AAAAEAAIAAAAZAA4AAAAEAAIAAAAZAA0AAAAEAAIAAAAZAAwAAAAEAAIAAAAZAAsAAAAEAAIAAAAZAAoAAAAEAAIAAAAZAAkAAAAEAAIAAAAZAAgAAAAEAAIAAAAZAAcAAAAEAAIAAAAZAAYAAAAEAAIAAAAZAAUAAAAEAAIAAAAZAAQAAAAEAAIAAAAZAAMAAAAEAAIAAAAZAAIAAAAEAAEAAAAYABEAAAACAAMAAAAYABAAAAAIAAIAAAAYAA8AAAAGAAAAAAAYAA4AAAAIAAEAAAAYAA0AAAAGAAIAAAAYAAwAAAAIAAEAAAAYAAsAAAAIAAIAAAAYAAoAAAAJAAEAAAAYAAkAAAAIAAEAAAAYAAgAAAAHAAEAAAAYAAcAAAAJAAEAAAAYAAYAAAAGAAAAAAAYAAUAAAAJAAAAAAAYAAQAAAAGAAIAAAAYAAMAAAAHAAIAAAAYAAIAAAACAAEAAAAXABEAAAADAAMAAAAXABAAAAAGAAEAAAAXAA8AAAAHAAIAAAAXAA4AAAAJAAEAAAAXAA0AAAAIAAEAAAAXAAwAAAAHAAAAAAAXAAsAAAAGAAAAAAAXAAoAAAAHAAEAAAAXAAkAAAAIAAAAAAAXAAgAAAAHAAEAAAAXAAcAAAAHAAAAAAAXAAYAAAAGAAEAAAAXAAUAAAAHAAEAAAAXAAQAAAAHAAEAAAAXAAMAAAAGAAEAAAAXAAIAAAADAAEAAAAWABEAAAADAAMAAAAWABAAAAAGAAIAAAAWAA8AAAAHAAIAAAAWAA4AAAAHAAAAAAAWAA0AAAAGAAEAAAAWAAwAAAAIAAIAAAAWAAsAAAAGAAAAAAAWAAoAAAAHAAIAAAAWAAkAAAAHAAIAAAAWAAgAAAAGAAAAAAAWAAcAAAAHAAEAAAAWAAYAAAAGAAAAAAAWAAUAAAAIAAIAAAAWAAQAAAAJAAEAAAAWAAMAAAAGAAIAAAAWAAIAAAACAAEAAAAVABEAAAADAAMAAAAVABAAAAAGAAEAAAAVAA8AAAAHAAIAAAAVAA4AAAAHAAIAAAAVAA0AAAAJAAIAAAAVAAwAAAAGAAIAAAAVAAsAAAAHAAEAAAAVAAoAAAAHAAEAAAAVAAkAAAAJAAEAAAAVAAgAAAAGAAEAAAAVAAcAAAAIAAIAAAAVAAYAAAAHAAIAAAAVAAUAAAAJAAAAAAAVAAQAAAAJAAIAAAAVAAMAAAAHAAAAAAAVAAIAAAACAAEAAAAUABEAAAADAAMAAAAUABAAAAAJAAAAAAAUAA8AAAAHAAIAAAAUAA4AAAAHAAAAAAAUAA0AAAAGAAIAAAAUAAwAAAAHAAEAAAAUAAsAAAAGAAEAAAAUAAoAAAAGAAAAAAAUAAkAAAAHAAAAAAAUAAgAAAAHAAEAAAAUAAcAAAAJAAAAAAAUAAYAAAAJAAAAAAAUAAUAAAAHAAIAAAAUAAQAAAAGAAIAAAAUAAMAAAAJAAIAAAAUAAIAAAADAAEAAAATABEAAAACAAMAAAATABAAAAAGAAAAAAATAA8AAAAGAAIAAAATAA4AAAAJAAAAAAATAA0AAAAGAAIAAAATAAwAAAAJAAIAAAATAAsAAAAGAAAAAAATAAoAAAAGAAEAAAATAAkAAAAJAAAAAAATAAgAAAAGAAAAAAATAAcAAAAHAAIAAAATAAYAAAAHAAAAAAATAAUAAAAGAAIAAAATAAQAAAAHAAIAAAATAAMAAAAIAAAAAAATAAIAAAADAAEAAAASABEAAAACAAMAAAASABAAAAAJAAAAAAASAA8AAAAIAAEAAAASAA4AAAAHAAEAAAASAA0AAAAHAAAAAAASAAwAAAAIAAIAAAASAAsAAAAHAAIAAAASAAoAAAAIAAIAAAASAAkAAAAHAAIAAAASAAgAAAAJAAEAAAASAAcAAAAJAAIAAAASAAYAAAAGAAEAAAASAAUAAAAIAAIAAAASAAQAAAAGAAEAAAASAAMAAAAJAAAAAAASAAIAAAACAAEAAAARABEAAAADAAMAAAARABAAAAAHAAEAAAARAA8AAAAGAAAAAAARAA4AAAAIAAAAAAARAA0AAAAGAAIAAAARAAwAAAAIAAAAAAARAAsAAAAGAAEAAAARAAoAAAAGAAIAAAARAAkAAAAGAAIAAAARAAgAAAAGAAAAAAARAAcAAAAIAAAAAAARAAYAAAAGAAEAAAARAAUAAAAHAAAAAAARAAQAAAAJAAIAAAARAAMAAAAJAAAAAAARAAIAAAACAAEAAAAQABEAAAACAAMAAAAQABAAAAAIAAIAAAAQAA8AAAAJAAIAAAAQAA4AAAAGAAIAAAAQAA0AAAAHAAAAAAAQAAwAAAAHAAEAAAAQAAsAAAAIAAIAAAAQAAoAAAAJAAIAAAAQAAkAAAAHAAEAAAAQAAgAAAAGAAIAAAAQAAcAAAAHAAIAAAAQAAYAAAAJAAEAAAAQAAUAAAAJAAAAAAAQAAQAAAAGAAIAAAAQAAMAAAAIAAEAAAAQAAIAAAADAAEAAAAPABEAAAADAAMAAAAPABAAAAAJAAIAAAAPAA8AAAAIAAIAAAAPAA4AAAAGAAAAAAAPAA0AAAAHAAAAAAAPAAwAAAAHAAIAAAAPAAsAAAAGAAAAAAAPAAoAAAAGAAEAAAAPAAkAAAAIAAAAAAAPAAgAAAAHAAAAAAAPAAcAAAAIAAEAAAAPAAYAAAAJAAAAAAAPAAUAAAAHAAEAAAAPAAQAAAAGAAAAAAAPAAMAAAAGAAEAAAAPAAIAAAADAAEAAAAOABEAAAACAAMAAAAOABAAAAAGAAEAAAAOAA8AAAAHAAIAAAAOAA4AAAAHAAEAAAAOAA0AAAAGAAIAAAAOAAwAAAAJAAAAAAAOAAsAAAAIAAAAAAAOAAoAAAAGAAEAAAAOAAkAAAAGAAAAAAAOAAgAAAAIAAAAAAAOAAcAAAAJAAIAAAAOAAYAAAAJAAAAAAAOAAUAAAAJAAAAAAAOAAQAAAAJAAEAAAAOAAMAAAAHAAAAAAAOAAIAAAACAAEAAAANABEAAAADAAMAAAANABAAAAAHAAIAAAANAA8AAAAJAAAAAAANAA4AAAAJAAIAAAANAA0AAAAJAAAAAAANAAwAAAAHAAEAAAANAAsAAAAIAAIAAAANAAoAAAAGAAIAAAANAAkAAAAIAAIAAAANAAgAAAAJAAAAAAANAAcAAAAJAAEAAAANAAYAAAAIAAEAAAANAAUAAAAHAAEAAAANAAQAAAAJAAEAAAANAAMAAAAIAAIAAAANAAIAAAADAAEAAAAMABEAAAACAAMAAAAMABAAAAAHAAIAAAAMAA8AAAAIAAAAAAAMAA4AAAAHAAIAAAAMAA0AAAAJAAEAAAAMAAwAAAAIAAIAAAAMAAsAAAAIAAEAAAAMAAoAAAAIAAIAAAAMAAkAAAAIAAIAAAAMAAgAAAAHAAEAAAAMAAcAAAAHAAAAAAAMAAYAAAAGAAAAAAAMAAUAAAAGAAAAAAAMAAQAAAAHAAEAAAAMAAMAAAAIAAIAAAAMAAIAAAACAAEAAAALABEAAAACAAMAAAALABAAAAAGAAIAAAALAA8AAAAGAAIAAAALAA4AAAAJAAEAAAALAA0AAAAIAAIAAAALAAwAAAAIAAAAAAALAAsAAAAJAAEAAAALAAoAAAAJAAIAAAALAAkAAAAHAAEAAAALAAgAAAAGAAIAAAALAAcAAAAJAAAAAAALAAYAAAAIAAIAAAALAAUAAAAGAAAAAAALAAQAAAAIAAIAAAALAAMAAAAGAAEAAAALAAIAAAADAAEAAAAKABEAAAABAAMAAAAKABAAAAABAAIAAAAKAA8AAAABAAIAAAAKAA4AAAABAAIAAAAKAA0AAAABAAIAAAAKAAwAAAABAAIAAAAKAAsAAAABAAIAAAAKAAoAAAABAAIAAAAKAAkAAAABAAIAAAAKAAgAAAABAAIAAAAKAAcAAAABAAIAAAAKAAYAAAABAAIAAAAKAAUAAAABAAIAAAAKAAQAAAABAAIAAAAKAAMAAAABAAIAAAAKAAIAAAABAAEAAAAKAAEAAAABAAAAAAALAAEAAAABAAAAAAAMAAEAAAABAAAAAAANAAEAAAADAAAAAAAOAAEAAAACAAAAAAAPAAEAAAADAAAAAAAQAAEAAAADAAAAAAARAAEAAAABAAAAAAASAAEAAAACAAAAAAATAAEAAAADAAAAAAAUAAEAAAADAAAAAAAVAAEAAAABAAAAAAAWAAEAAAAEAAAAAAAXAAEAAAACAAAAAAAYAAEAAAABAAAAAAAZAAEAAAABAAAAAAAJAAEAAAAAAAMAAAAJAAIAAAAAAAIAAAAJAAMAAAAAAAIAAAAJAAQAAAAAAAMAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAIAAAAJAAcAAAAAAAEAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAIAAAAJAAoAAAAAAAIAAAAJAAsAAAAAAAIAAAAJAAwAAAAAAAAAAAAJAA0AAAAAAAAAAAAJAA4AAAAAAAAAAAAJAA8AAAAAAAAAAAAJABAAAAAAAAIAAAAJABEAAAAAAAIAAAAaAAEAAAAFAAAAAAAaAAIAAAAFAAAAAAAaAAMAAAAFAAAAAAAaAAQAAAAFAAAAAAAaAAUAAAAFAAAAAAAaAAYAAAAFAAIAAAAaAAcAAAAFAAEAAAAaAAgAAAAFAAAAAAAaAAkAAAAFAAIAAAAaAAoAAAAFAAAAAAAaAAsAAAAFAAEAAAAaAAwAAAAFAAAAAAAaAA0AAAAFAAAAAAAaAA4AAAAFAAIAAAAaAA8AAAAFAAEAAAAaABAAAAAFAAIAAAAaABEAAAAFAAAAAAAJABIAAAAAAAQAAAAaABIAAAAFAAQAAAAKABIAAAAEAAQAAAALABIAAAADAAQAAAAMABIAAAACAAQAAAANABIAAAADAAQAAAAOABIAAAAEAAQAAAAPABIAAAADAAQAAAAQABIAAAACAAQAAAARABIAAAABAAQAAAASABIAAAAEAAQAAAATABIAAAADAAQAAAAUABIAAAAEAAQAAAAVABIAAAACAAQAAAAWABIAAAADAAQAAAAXABIAAAAEAAQAAAAYABIAAAADAAQAAAAZABIAAAADAAQAAAA=")
tile_set = SubResource("TileSet_r5v4w")

[node name="EntityManager" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_uocvj")

[node name="BuildUI" type="Node2D" parent="."]
script = ExtResource("2_xdf3i")

[node name="UIBlock" type="Control" parent="BuildUI"]
layout_mode = 3
anchors_preset = 0

[node name="BoardArea" type="ColorRect" parent="BuildUI/UIBlock"]
layout_mode = 0
offset_left = 323.0
offset_top = 65.0
offset_right = 830.0
offset_bottom = 572.0
color = Color(1, 1, 1, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="BuildUI/UIBlock"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 46.0
offset_top = 491.0
offset_right = 248.0
offset_bottom = 600.0
grow_vertical = 0
theme_override_constants/separation = 15

[node name="Capacity" type="Label" parent="BuildUI/UIBlock/VBoxContainer"]
unique_name_in_owner = true
z_index = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1f6rj")
theme_override_font_sizes/font_size = 35
text = "CAPACITY: N/A"
horizontal_alignment = 1

[node name="Ready" type="Button" parent="BuildUI/UIBlock/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1f6rj")
theme_override_font_sizes/font_size = 35
text = "READY"

[node name="ClickPlayer" type="AudioStreamPlayer" parent="BuildUI/UIBlock/VBoxContainer/Ready"]
stream = ExtResource("6_ey8w6")

[node name="CapacityBorder" type="ColorRect" parent="BuildUI/UIBlock"]
z_as_relative = false
layout_mode = 0
offset_left = 46.0
offset_top = 486.0
offset_right = 248.0
offset_bottom = 539.0
color = Color(0.129412, 0.129412, 0.129412, 1)

[node name="Tip" type="Label" parent="BuildUI/UIBlock"]
layout_mode = 0
offset_left = 886.0
offset_top = 554.0
offset_right = 1133.0
offset_bottom = 603.0
theme_override_fonts/font = ExtResource("2_1f6rj")
theme_override_font_sizes/font_size = 35
text = "SHIFT to reopen map"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Invalid" type="ColorRect" parent="BuildUI/UIBlock"]
process_mode = 4
layout_mode = 0
offset_left = 461.0
offset_top = 464.0
offset_right = 689.0
offset_bottom = 578.0
color = Color(1, 0.235294, 0.258824, 0.101961)

[node name="Area2D" type="Area2D" parent="BuildUI/UIBlock/Invalid"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BuildUI/UIBlock/Invalid/Area2D"]
position = Vector2(114, 57)
shape = SubResource("RectangleShape2D_811ij")

[node name="StickyNotes" type="Sprite2D" parent="BuildUI/UIBlock"]
position = Vector2(640, 272)
scale = Vector2(1.04259, 1.04259)
texture = ExtResource("7_86ec3")

[node name="Area2D" type="Area2D" parent="BuildUI"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BuildUI/Area2D"]
position = Vector2(304, 321)
shape = SubResource("RectangleShape2D_jcsgq")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BuildUI/Area2D"]
position = Vector2(847.75, 318)
shape = SubResource("RectangleShape2D_jcsgq")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="BuildUI/Area2D"]
position = Vector2(577, 48)
rotation = -1.57079
shape = SubResource("RectangleShape2D_jcsgq")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="BuildUI/Area2D"]
position = Vector2(576, 591)
rotation = -1.57079
shape = SubResource("RectangleShape2D_jcsgq")

[node name="Info" type="Control" parent="BuildUI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 46.0
offset_top = 32.0
offset_right = 249.0
offset_bottom = 475.0

[node name="InfoBackground" type="ColorRect" parent="BuildUI/Info"]
layout_mode = 0
offset_right = 202.0
offset_bottom = 443.0
color = Color(0.129412, 0.129412, 0.129412, 1)

[node name="BattleUI" type="Node2D" parent="."]

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_mygq7")

[connection signal="battle_end" from="EntityManager" to="." method="_on_entity_manager_battle_end"]
[connection signal="in_battle" from="EntityManager" to="." method="_on_entity_manager_in_battle"]
[connection signal="battle_start" from="BuildUI" to="EntityManager" method="_on_build_ui_battle_start"]
[connection signal="mouse_entered" from="BuildUI/UIBlock/BoardArea" to="BuildUI" method="_on_board_area_mouse_entered"]
[connection signal="mouse_exited" from="BuildUI/UIBlock/BoardArea" to="BuildUI" method="_on_board_area_mouse_exited"]
[connection signal="pressed" from="BuildUI/UIBlock/VBoxContainer/Ready" to="BuildUI" method="_on_ready_pressed"]
[connection signal="area_entered" from="BuildUI/UIBlock/Invalid/Area2D" to="BuildUI" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="BuildUI/UIBlock/Invalid/Area2D" to="BuildUI" method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="BuildUI/Area2D" to="BuildUI" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="BuildUI/Area2D" to="BuildUI" method="_on_area_2d_area_exited"]
[connection signal="mouse_entered" from="BuildUI/Area2D" to="BuildUI" method="_on_area_2d_mouse_entered"]
